--- a/HSUMHS.UI/Views/Home/Index.cshtml
+++ b/HSUMHS.UI/Views/Home/Index.cshtml
@@ -87,24 +87,24 @@
     </div>
 </section>
 <section class="section novi-background bg-cover section-70 section-md-114 bg-default">
-    <div class="shell">
+    <div class="shell container text-center">
         <h2 class="text-bold">পরিসংখ্যান</h2>
         <hr class="divider bg-madison">
         <div class="range range-65 range-xs-center range-md-left offset-top-55 counters">
             <div class="cell-sm-6 cell-md-3">
                 <div class="counter-type-1">
                     <span class="icon novi-icon icon-lg icon-outlined text-madison mdi mdi-school"></span>
-                    <div class="h3 text-bold text-primary offset-top-15"><span class="counter">92</span><span class="symbol">%</span></div>
+                    <div class="h3 text-bold text-primary offset-top-15"><span class="counter text-success">92</span><span class="symbol text-success">%</span></div>
                     <hr class="divider bg-gray-light divider-sm">
                     <div class="offset-top-10">
-                        <h6 class="text-black font-accent">পাশের হার</h6>
+                        <h6 class="text-black  font-accent">পাশের হার</h6>
                     </div>
                 </div>
             </div>
             <div class="cell-sm-6 cell-md-3">
                 <div class="counter-type-1">
                     <span class="icon novi-icon icon-lg icon-outlined text-madison mdi mdi-wallet-travel"></span>
-                    <div class="h3 text-bold text-primary offset-top-15"><span class="counter">24</span><span class="symbol"></span></div>
+                    <div class="h3 text-bold text-primary offset-top-15"><span class="counter text-success">24</span><span class="symbol"></span></div>
                     <hr class="divider bg-gray-light divider-sm">
                     <div class="offset-top-10">
                         <h6 class="text-black font-accent">শিক্ষক</h6>
@@ -114,7 +114,7 @@
             <div class="cell-sm-6 cell-md-3">
                 <div class="counter-type-1">
                     <span class="icon novi-icon icon-lg icon-outlined text-madison mdi mdi-domain"></span>
-                    <div class="h3 text-bold text-primary offset-top-15"><span class="counter">3</span><span class="symbol"></span></div>
+                    <div class="h3 text-bold text-primary offset-top-15"><span class="counter text-success">3</span><span class="symbol"></span></div>
                     <hr class="divider bg-gray-light divider-sm">
                     <div class="offset-top-10">
                         <h6 class="text-black font-accent">ভবন</h6>
@@ -124,7 +124,7 @@
             <div class="cell-sm-6 cell-md-3">
                 <div class="counter-type-1">
                     <span class="icon novi-icon icon-lg icon-outlined text-madison mdi mdi-account-multiple-outline"></span>
-                    <div class="h3 text-bold text-primary offset-top-15"><span class="counter">850</span><span class="symbol"></span></div>
+                    <div class="h3 text-bold text-primary offset-top-15"><span class="counter text-success">850</span><span class="symbol"></span></div>
                     <hr class="divider bg-gray-light divider-sm">
                     <div class="offset-top-10">
                         <h6 class="text-black font-accent">শিক্ষার্থীর সংখ্যা</h6>
@@ -135,7 +135,7 @@
     </div>
 </section>
 <section class="section novi-background bg-cover section-70 section-md-114 bg-catskill">
-    <div class="shell-wide">
+    <div class="shell-wide text-center container">
         <h2 class="text-bold">Events</h2>
         <hr class="divider bg-madison">
         <div class="range range-50 offset-top-50 range-xs-center">
@@ -244,7 +244,7 @@
 </section>
 
 <section class="section novi-background bg-cover section-70 section-md-114 bg-default">
-    <div class="shell">
+    <div class="shell text-center container">
         <h2>গ্যালারী</h2>
         <hr class="divider bg-madison">
         <div class="offset-top-60">
